# pymgt

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  todo.md
.github/workflows/: coverage.yml  python-package.yml  test.yml
data/: jura.csv  synthetic_minerals.csv
examples/: simple.py
src/pymgt/: __init__.py  interface.py  metrics.py  nscores.py  ppmt.py  ppmt_utils.py  rbigt.py  sphering.py  tindex.py  transform.py  utils.py
test/: test_basics.py  test_geometry.py  test_metrics.py  test_nscores.py  test_ppmt.py  test_ppmt_utils.py  test_rbigt.py  test_sphering.py  test_tindex.py  test_utils.py
