[metadata]
name = pymgt
version = 0.1.1
author = Exequiel Sepulveda
author_email = esepulveda@protonmail.com
description = Multivariate Gaussian transforms
license = MIT
platform = any
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/exepulveda/pymgt
project_urls =
    Bug Tracker = https://github.com/exepulveda/pymgt/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
    numpy>=1.20
    scipy
    scikit-learn
include_package_data = true
test_suite = test
tests_require = 
    pytest

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[options.package_data]
data = data/jura.csv, data/synthetic_minerals.csv

[options.packages.find]
where = src 